Home Stuck Fix

--- a/src/components/poster/Poster.css
+++ b/src/components/poster/Poster.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background: linear-gradient(180deg, #090e41 60%, #107800 100%);
-  height: 100vh;
+  height: 150vh;
   overflow-y: auto; /* Changed to allow scrolling */
   overflow-x: hidden;
   position: relative;
